--- a/git/clone-with-ssh.yaml
+++ b/git/clone-with-ssh.yaml
@@ -9,7 +9,7 @@ command: |-
 tags:
   - git
   - ssh
-description: Clones a git repository given a specific SSH Key Path
+description: Clones a git repository given a specific SSH Key Path and configures it to use the desired Name and Email
 arguments:
   - name: sshKeyPath
     description: The path of the SSH Key to be used
@@ -26,7 +26,7 @@ arguments:
   - name: userEmail
     description: The Email of the User to be configured for the git repository
     default_value: johndoe@example.com
-source_url: ""
+source_url: "https://github.com/charlieVader/warp-workflows/blob/master/git/clone-with-ssh.yaml"
 author: charlieVader
 author_url: "https://github.com/charlieVader"
 shells: []
